Fade in transition from loading screen, fix page overflow bug

--- a/public/styles/screen.css
+++ b/public/styles/screen.css
@@ -53,17 +53,15 @@
 .fx.pop.in.reverse{z-index:0;-webkit-animation-name:dontmove;}
 @-webkit-keyframes popin{from{-webkit-transform:scale(.2);opacity:0;}to{-webkit-transform:scale(1);opacity:1;}}
 @-webkit-keyframes popout{from{-webkit-transform:scale(1);opacity:1;}to{-webkit-transform:scale(.2);opacity:0;}}
-abbr,img{text-decoration:none;border:none;}
-html,body{height:100%;}
-body{overflow-x:hidden;-webkit-user-select:none;-webkit-text-size-adjust:none;}
+*{margin:0;padding:0;line-height:1.5em;}
+body,a:link,a:active,a:visited,abbr,img{color:white;text-decoration:none;}
+img{border:none;}
+body{-webkit-user-select:none;-webkit-text-size-adjust:none;background:black;font:bold 75%/1.5em Helvetica,Arial,sans-serif;}
 header,footer{display:none;}
 .content header,.content footer,section{display:block;}
 .content{-webkit-perspective:800;-webkit-transform-style:preserve-3d;}
-.page{-webkit-backface-visibility:hidden;-webkit-box-sizing:border-box;display:none;position:absolute;left:0;width:100%;-webkit-transform:translate3d(0,0,0) rotate(0) scale(1);min-height:460px;background:#3a3a3a url(/images/background_4x1.png) top left repeat;margin:0 auto;}
+.page{z-index:0;overflow:hidden;-webkit-backface-visibility:hidden;-webkit-box-sizing:border-box;display:none;position:absolute;left:0;width:100%;-webkit-transform:translate3d(0,0,0) rotate(0) scale(1);min-height:460px;background:#3a3a3a url(/images/background_4x1.png) top left repeat;margin:0 auto;}
 .page.active{display:block !important;}
-*{margin:0;padding:0;line-height:1.5em;}
-body{background:black;font:bold 75%/1.5em Helvetica,Arial,sans-serif;-webkit-text-size-adjust:none;}
-body,a:link,a:active,a:visited{color:white;text-decoration:none;}
 .journeys section{margin-bottom:20px;}
 .journeys footer{width:100%;text-align:center;position:absolute;bottom:0;left:0;}
 .group:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
@@ -85,6 +83,7 @@ ol li > *{display:block;text-align:left;}
 ol li a.loader{padding:9px;background-image:none;text-align:center;color:#2470d8;text-shadow:1px 1px 0 rgba(255,255,255,0.5);font-size:15px;line-height:40px;}
 input,select{text-shadow:none !important;width:136px;font-size:17px;}
 form span{text-align:center;}
+.loading{z-index:1;position:absolute;top:0;left:0;display:none;}
 .eta{font-size:12px;float:left;background-color:#66cc00;border-bottom:1px solid #59b200;background-image:-webkit-gradient(linear,left top,left bottom,from(#66cc00),to(#53bc00));background-image:-moz-linear-gradient(top,#66cc00,#53bc00);margin:-9px 9px -10px -9px;padding:11px 5px;text-align:center;width:34px;height:40px;text-overflow:ellipsis;overflow:hidden;text-shadow:-1px -1px 0 rgba(0,0,0,0.5);color:white;}
 .lt_ten{background-color:#ff8c00;background-image:-webkit-gradient(linear,left top,left bottom,from(#ff8c00),to(#d86c00));background-image:-moz-linear-gradient(top,#ff8c00,#d86c00);border-color:#c60;}
 .lt_five{background-color:#e50000;background-image:-webkit-gradient(linear,left top,left bottom,from(#e50000),to(#bf0000));background-image:-moz-linear-gradient(top,#e50000,#bf0000);border-color:#b20000;}
@@ -107,7 +106,7 @@ footer ul li.left,footer ul li.right{display:block;float:left;}
 footer ul li.right{float:right;}
 footer .arrow a span{color:transparent;display:block;width:6px;height:9px;background:url(/images/sprites.png) no-repeat -35px 0;margin:8px 17px 8px 2px;}
 footer .right.arrow a span{background-position: -35px -9px;margin:8px 2px 8px 17px;}
-footer .arrow.disabled{color:transparent;}
+footer .arrow a.disabled span{color:transparent;background:none;}
 .stop .location{font-size:17px;width:134px;float:left;}
 .stop .time{width:75px;float:right;text-align:right;}
 .platform{font-size:13px;clear:right;float:right;text-align:right;}
